# xor-app

./: CMakeLists.txt  Main.qml  app.cpp  app.h  helpers.js  main.cpp
